--- a/fylo/index.html
+++ b/fylo/index.html
@@ -37,7 +37,7 @@
 
     <!-- Theme Toggle Button -->
     <button id="toggle-theme-btn"
-      class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-full text-sm p-2.5">
+            class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-full text-sm p-2.5">
       <!-- Dark SVG Icon -->
       <svg
         id="theme-toggle-dark-icon"
@@ -88,6 +88,194 @@
   </div>
 </section>
 
+<!-- Features Section -->
+<section id="features" class="pt-32 bg-gray-50 dark:bg-darkBlue">
+  <!-- Features Container -->
+  <div class="container mx-auto px-6 pb-32">
+
+    <!-- First row -->
+    <div class="flex flex-col md:flex-row space-y-24 md:space-y-0 text-center">
+
+      <!-- Item 1 -->
+      <div class="flex flex-col items-center space-y-2 md:w-1/2">
+        <div class="flex items-center justify-center h-24 mb-6">
+          <img src="images/icon-access-anywhere.svg" alt="">
+        </div>
+        <h3 class="text-xl font-bold">Access your files from anywhere</h3>
+        <p class="max-w-md">
+          The ability to use a smartphone, tablet, or computer to access
+          your account means your files follow you everywhere.
+        </p>
+      </div>
+
+      <!-- Item 2-->
+      <div class="flex flex-col items-center space-y-2 md:w-1/2">
+        <div class="flex items-center justify-center h-24 mb-6">
+          <img src="images/icon-security.svg" alt="">
+        </div>
+        <h3 class="text-xl font-bold">Security you can trust</h3>
+        <p class="max-w-md">
+          2-factor authentication and user-controlled encryption are just a
+          couple of the security features we allow to help secure your
+          files.
+        </p>
+      </div>
+
+    </div>
+
+    <!-- Second row -->
+    <div class="flex flex-col md:flex-row mt-24 space-y-24 md:space-y-0 text-center">
+
+      <!-- Item 3 -->
+      <div class="flex flex-col items-center space-y-2 md:w-1/2">
+        <div class="flex items-center justify-center h-24 mb-6">
+          <img src="images/icon-collaboration.svg" alt="">
+        </div>
+        <h3 class="text-xl font-bold">Access your files from anywhere</h3>
+        <p class="max-w-md">
+          The ability to use a smartphone, tablet, or computer to access
+          your account means your files follow you everywhere.
+        </p>
+      </div>
+
+      <!-- Item 4-->
+      <div class="flex flex-col items-center space-y-2 md:w-1/2">
+        <div class="flex items-center justify-center h-24 mb-6">
+          <img src="images/icon-any-file.svg" alt="">
+        </div>
+        <h3 class="text-xl font-bold">Security you can trust</h3>
+        <p class="max-w-md">
+          2-factor authentication and user-controlled encryption are just a
+          couple of the security features we allow to help secure your
+          files.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
+<!-- Productive Section -->
+<section id="productive" class="bg-white dark:bg-darkBlue">
+  <!-- Productive Container -->
+  <div class="container flex flex-col md:flex-row items-center mx-auto md:space-x-16 p-6 pt-24 pb-32">
+
+    <!-- Image -->
+    <div class="md:w-1/2">
+      <img src="images/illustration-stay-productive.png" alt="" class="mb-10">
+    </div>
+
+    <!-- Content -->
+    <div class="flex flex-col items-start md:w-1/2">
+      <div class="flex flex-col space-y-5">
+        <h4 class="max-w-md text-xl md:text-4xl font-bold">
+          Stay productive, wherever you are
+        </h4>
+        <p class="text-md md:text-lg">
+          Never let location be an issue when accessing your files. Fylo has
+          you covered for all of your file storage needs.
+        </p>
+        <p class="text-md md:text-lg">
+          Securely share files and folders with friends, family and
+          colleagues for live collaboration. No email attachments required.
+        </p>
+      </div>
+    </div>
+
+    <!-- Link -->
+    <div class="block mt-4">
+      <div class="border-b border-accentCyan text-accentCyan">
+        See how Fylo works
+        <img src="images/icon-arrow.svg" alt="" class="inline pb-2">
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- Early Access Section -->
+<section id="early-access" class="relative px-4 md:px-0 dark:bg-darkBlue2">
+  <div
+    class="relative -top-40 max-w-4xl mx-auto p-10 px-6 md:px-16 space-y-6 text-center rounded-lg bg-gray-200 dark:bg-darkBlue1">
+    <h5 class="text-2xl font-bold">Get early access today</h5>
+    <div class="text-sm">
+      It only takes a minute to sign up and our free starter tier is
+      extremely generous. If you have any questions, our support team would
+      be happy to help you.
+    </div>
+    <!-- Input and Button Container -->
+    <div class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-6">
+      <div class="w-full md:flex-1">
+        <input type="text" class="w-full px-10 py-3 rounded-full focus:outline-none"
+               placeholder="email@example.com"></input>
+      </div>
+
+      <button class="w-full md:w-56 p-3 px-6 rounded-full bg-accentCyan hover:scale-95">
+        Get Started For Free
+      </button>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-darkBlue2 text-white">
+  <div class="container mx-auto p-12 px-5 pb-10">
+    <!-- Flex container for all items -->
+    <div class="flex flex-col md:flex-row justify-between space-y-24 md:space-y-0">
+      <!-- Email & Phone -->
+      <div class="mt-10 space-y-6">
+        <div class="flex items-center space-x-3 md:-mt-10">
+          <div class="w-6">
+            <img src="images/icon-phone.svg" alt="" class="scale-10">
+          </div>
+          <div>+1-123-123-4567</div>
+        </div>
+        <div class="flex items-center space-x-3">
+          <div class="w-6">
+            <img src="images/icon-email.svg" alt="" class="scale-10">
+          </div>
+          <div>email@example.com</div>
+        </div>
+      </div>
+
+      <!-- Menus -->
+      <div class="flex flex-col md:flex-row space-y-10 md:space-y-0 md:space-x-20 text-xl md:text-base">
+        <div class="flex flex-col space-y-3">
+          <a href="#">About</a>
+          <a href="#">Jobs</a>
+          <a href="#">Press</a>
+          <a href="#">Blog</a>
+        </div>
+        <div class="flex flex-col space-y-3">
+          <a href="#">Contact Us</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+        </div>
+      </div>
+
+      <!-- Social -->
+      <div class="flex justify-center pb-10 space-x-3">
+        <div>
+          <a href="#">
+            <img src="images/facebook.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="images/twitter.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="images/instagram.svg" alt="" class="p-2 bg-darkBlue rounded-full ficon">
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
